--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ionicons": "^7.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.0.14",
     "vite": "^6.2.0"
   }
